--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "nodemon": "^3.1.0",
