--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.6.2"
+    "mongodb": "^6.6.2",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.15",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
