--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,5 +107,6 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "**/*.test.ts"],
+  "files": ["src/global/index.d.ts"]
 }
