--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "^6.9.13",
     "redis": "^4.6.14",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
