--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "nodemailer": "^6.9.13",
+    "prom-client": "^15.1.2",
     "redis": "^4.6.14",
+    "response-time": "^2.3.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.13.0"
@@ -38,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.15",
+    "@types/response-time": "^2.3.8",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "i18next-resources-for-ts": "^1.5.0",
