--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "author": "Oksana(KsyFate) <oprokopieva382@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prepare": "husky install",
     "dev": "yarn nodemon --inspect dist/index.js",
     "watch": "tsc -w",
-    "test": "jest -i --detectOpenHandles --no-cache --watchAll --testPathPattern=__tests__/e2e/.*..e2e.test.ts",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "runTest": "jest -i --detectOpenHandles --no-cache --watchAll --testPathPattern=__tests__/e2e/.*..e2e.test.ts",
+    "postinstall": "husky"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "dependencies": {
     "@types/i18next": "^13.0.0",
@@ -27,7 +30,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "nodemailer": "^6.9.13",
-    "prettier-check": "^2.0.0",
     "prom-client": "^15.1.2",
     "redis": "^4.6.14",
     "response-time": "^2.3.2",
@@ -50,18 +52,12 @@
     "husky": "^9.0.11",
     "i18next-resources-for-ts": "^1.5.0",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.7",
     "nodemon": "^3.1.0",
-    "prettier": "^3.3.2",
+    "prettier": "3.3.2",
+    "pretty-quick": "^4.0.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
-  },
-   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write",
-      "git add"
-    ]
   }
 }
