--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "runTest": "jest -i --detectOpenHandles --no-cache --watchAll --testPathPattern=__tests__/e2e/.*..e2e.test.ts",
     "postinstall": "husky"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
@@ -52,8 +58,9 @@
     "husky": "^9.0.11",
     "i18next-resources-for-ts": "^1.5.0",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
     "nodemon": "^3.1.0",
-    "prettier": "3.3.2",
+    "prettier": "^3.3.2",
     "pretty-quick": "^4.0.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.4",
