--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "yarn format",
-      "git add"
+      "yarn format"
     ]
   },
   "husky": {
