--- a/package.json
+++ b/package.json
@@ -7,21 +7,13 @@
   "author": "Oksana(KsyFate) <oprokopieva382@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "postinstall": "husky",
     "dev": "yarn nodemon --inspect dist/index.js",
     "watch": "tsc -w",
-    "test": "jest -i --detectOpenHandles --no-cache --watchAll --testPathPattern=__tests__/e2e/.*..e2e.test.ts",
-    "postinstall": "husky",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
+    "runTest": "jest -i --detectOpenHandles --no-cache --watchAll --testPathPattern=__tests__/e2e/.*..e2e.test.ts"
   },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "yarn format"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": ".husky/_/pre-commit"
-    }
+   "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@types/i18next": "^13.0.0",
@@ -60,8 +52,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "nodemon": "^3.1.0",
-    "prettier": "^3.3.2",
-    "pretty-quick": "^4.0.0",
+    "prettier": "3.3.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
