--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "runTest": "jest -i --detectOpenHandles --no-cache --watchAll --testPathPattern=__tests__/e2e/.*..e2e.test.ts"
   },
    "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "src/**/*": "prettier --write ."
   },
   "dependencies": {
     "@types/i18next": "^13.0.0",
