--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "husky",
-    "format": "prettier . --write",
+    "format": "prettier --write",
     "lint-staged": "lint-staged",
     "dev": "yarn nodemon --inspect dist/index.js",
     "watch": "tsc -w",
@@ -16,13 +16,12 @@
   },
   "lint-staged": {
     "**/*": [
-      "yarn lint",
       "yarn format"
     ]
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npx lint-staged"
+      "pre-commit":  ".husky/_/pre-commit"
     }
   },
   "dependencies": {
