last tuch up with prettier config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "yarn nodemon --inspect dist/index.js",
     "watch": "tsc -w",
     "test": "jest -i --detectOpenHandles --no-cache --watchAll --testPathPattern=__tests__/e2e/.*..e2e.test.ts",
-    "prepare": "husky"
+    "prepare": "husky",
+    "format": "prettier . --write"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
